--- a/nivelBasico/nube.html
+++ b/nivelBasico/nube.html
@@ -288,7 +288,7 @@ function showErrorMessage(message) {
 
     var redirectButton = document.getElementById('redirectButton');
     redirectButton.addEventListener('click', function() {
-      window.location.href = 'nube.html';
+      window.location.href = 'pato.html';
     });
 
     function goBack() {
