implementacion de palabras

--- a/nivelBasico/pera.html
+++ b/nivelBasico/pera.html
@@ -288,7 +288,7 @@ function showErrorMessage(message) {
 
     var redirectButton = document.getElementById('redirectButton');
     redirectButton.addEventListener('click', function() {
-      window.location.href = 'nube.html';
+      window.location.href = 'piedra.html';
     });
 
     function goBack() {
