--- a/nivelBasico/pulpo.html
+++ b/nivelBasico/pulpo.html
@@ -288,7 +288,7 @@ function showErrorMessage(message) {
 
     var redirectButton = document.getElementById('redirectButton');
     redirectButton.addEventListener('click', function() {
-      window.location.href = 'pulpo.html';
+      window.location.href = 'mostrarTrofeo.html';
     });
 
     function goBack() {
